# FAAST

./: .cdtproject  .cproject  .cvsignore  .project  Artin-Schreier.hpp  CONTENTS  COPYING  ChangeLog.md  Copying.html  Couveignes2000_8hpp_source.html  Credits.html  Exceptions_8hpp_source.html  FE-Liftup-Pushdown_8hpp_source.html  FE-Trace-Frob_8hpp_source.html  FieldAlgorithms_8hpp_source.html  FieldPrecomputations_8hpp_source.html  GCD_8hpp_source.html  GNUFDL.html  Introduction.html  Makefile  Makefile.am  Makefile.in  Minpols_8hpp_source.html  README  README.md  References.html  Refman.html  Tmul_8hpp_source.html  Using.html  aclocal.m4  annotated.html  bench.sh  classFAAST_1_1BadParametersException.html  classFAAST_1_1CharacteristicTooLargeException.html  classFAAST_1_1DivisionByZeroException.html  classFAAST_1_1FAASTException.html  classFAAST_1_1Field.html  classFAAST_1_1FieldElement.html  classFAAST_1_1FieldPolynomial.html  classFAAST_1_1IllegalCoercionException.html  (+65 more)
Magma/: bench.sh  build_builtin.mgm  build_field.mgm  build_multi.mgm  iso_field.mgm  isobench.sh  nohup.out  testsuite.sh
doxygen/: Makefile.am  Makefile.in  biblio.dox  copying.dox  credits.dox  gnufdl.dox  install.dox  intro.dox  main.dox  refman.dox  style.css  use.dox
examples/: Makefile.am  Makefile.in  using_infrastructure.c++
include/: Artin-Schreier.hpp  Exceptions.hpp  Field.hpp  FieldElement.hpp  FieldPolynomial.hpp  Makefile.am  Makefile.in  Shifts.hpp  Tmul.hpp  Types.hpp  config.h.in  faast.hpp  utilities.hpp
include/AS/: Exceptions.hpp  Field.hpp  FieldElement.hpp  FieldPolynomial.hpp  NTLhacks.hpp  Tmul.hpp  Types.hpp  utilities.hpp
include/FAAST/: Exceptions.hpp  Field.hpp  FieldElement.hpp  FieldPolynomial.hpp  NTLhacks.hpp  Tmul.hpp  Types.hpp  utilities.hpp
src/: Couveignes2000.c++  Couveignes2000.hpp  FE-Liftup-Pushdown.c++  FE-Trace-Frob.c++  FE-Trace-Frob.hpp  Field.c++  FieldAlgorithms.c++  FieldElement.c++  FieldElement.hpp  FieldElementAlgorithms.c++  FieldPolynomial.c++  FieldPolynomial.hpp  FieldPrecomputations.c++  FieldPrecomputations.hpp  GCD.hpp  GF2hack.c++  Makefile.am  Makefile.in  Minpols.c++  Minpols.hpp  NTLhacks.c++  NTLhacks.hpp  Types.c++  Types.hpp  explicit_instantiation.c++  test.c++  testCyclotomic.c++  testIso.c++  testLE.c++  testStem.c++  testTmul.c++  testTraceFrob.c++  utilities.c++
test/: Makefile.am  Makefile.in  test.c++  testCyclotomic.c++  testGCD.c++  testIso.c++  testLE.c++  testNTLmul.c++  testStem.c++  testTmul.c++  testTraceFrob.c++
testsuites/: suite-101.tst  suite-2.tst  suite-2D.tst  suite-2d.tst  suite-3.tst  suite-7.tst  suite-D.tst  suite-d.tst  suite-p.tst
